feat: add TMDB Bearer token authentication

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ Thumbs.db
 
 # Private learning notes
 LEARNING-NOTES.md
+
+# Environment files with secrets
+src/environments/environment.development.ts
+
