refactor: add basic grid structure for project foundation

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ Thumbs.db
 # Private learning notes
 LEARNING-NOTES.md
 glossary.md
+SESSION-CONTEXT.md
 
 # Environment files with secrets
 src/environments/environment.development.ts
