--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@supabase/supabase-js": "^2.90.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
