--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   "private": true,
   "packageManager": "bun@1.3.6",
   "dependencies": {
-    "@angular/common": "^21.1.0",
-    "@angular/compiler": "^21.1.0",
-    "@angular/core": "^21.1.0",
-    "@angular/forms": "^21.1.0",
-    "@angular/platform-browser": "^21.1.0",
-    "@angular/router": "^21.1.0",
+    "@angular/common": "^21.1.1",
+    "@angular/compiler": "^21.1.1",
+    "@angular/core": "^21.1.1",
+    "@angular/forms": "^21.1.1",
+    "@angular/platform-browser": "^21.1.1",
+    "@angular/router": "^21.1.1",
     "firebase": "^12.8.0",
+    "netlify-cli": "^23.13.5",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
@@ -38,7 +39,7 @@
     "@angular-eslint/builder": "21.1.0",
     "@angular/build": "^21.1.1",
     "@angular/cli": "^21.1.1",
-    "@angular/compiler-cli": "^21.1.0",
+    "@angular/compiler-cli": "^21.1.1",
     "@eslint/js": "^9.39.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@vitest/ui": "^4.0.17",
